# ght-qcxr

./: .gitignore  README.md  anatomical_filters.py  cxas_diaphragm_ribs_inspiration.py  cxas_diaphragm_ribs_inspiration_1.py  cxas_sanity_check.py  cxas_sanity_check_2.py  cxas_sanity_check_3.py  cxas_spine_clavicle_rotation.py  cxas_sternum_clavicles_lung_rotation.py  cxas_sternum_clavicles_rotation.py  cxas_sternum_spine_parallax.py  cxas_sternum_spine_parallax_2.py  cxr_test_1.py  debug_cxas.py  ensemble.py  exposure.py  exposure_demo.py  find_padchest_inspiration.py  generate_medmnist_other_images.py  generate_other_images.py  get_images_orthanc.py  inspiration.py  inspiration_demo.py  inspiration_simple_no_rib_area_check.py  organize_chexpert.py  pipeline.py  prep_pa_keypoints.py  preprocessing.py  projection.py  pyproject.toml  pytest.ini  rotation.py  rotation_demo.py  segment.py  segment_ensemble_demo.py  segment_ensemble_demo_full.py  test_preprocessing.py  xrv_segmentation.py
gemini/: cxr_tb_1_report_gemini_3_pro_AIStudio.txt  cxr_tb_2_report_gemini_3_pro_AIStudio.txt  dev1.md
medgemma/: anatomical_part.py  anatomical_part_laterality_projection.py  cxr_detect_1.py  cxr_detect_2.py  cxr_tb_1_report_kaggle_medgemma_1.5.txt  cxr_tb_2_report_kaggle_medgemma_1.5.txt  cxr_test_1.py  cxr_test_2.py  cxr_test_mlx_1.py
medsiglip/: benchmark_medsiglip_vision.py  cxr_anatomy_detect.py  cxr_batch_classifier_0.py  cxr_batch_classifier_1.py  cxr_batch_classifier_2.py  cxr_batch_classifier_3.py  cxr_batch_classifier_fast_4.py  cxr_detect.py  cxr_detect_ensemble.py  (+14 more)
(+18 files in other folders)
